added modal that acknowledges favourite selection

--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -1,5 +1,15 @@
+<div id="banner">
 <h1 class="heading">Star Wars Films</h1>
-  <table id="table">
+</div>
+    <div class="modal" style="display: none">
+      <div class="overlay"></div>
+      <div class="modal_content">
+        <button title="Close" class="close_modal">
+        x
+        </button>
+      </div>
+    </div>
+<table id="table">
   <thead>
     <th>Film Title</th>
     <th>Producer</th>
