--- a/app/assets/stylesheets/films.scss
+++ b/app/assets/stylesheets/films.scss
@@ -44,6 +44,57 @@ tr:nth-child(even) {
   display: inline-block;
   font-size: 16px;
 }
-font {
-  color: rgb(185, 47, 47);
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 990;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 995;
+  background: rgba(46, 45, 45, 0.85);
+}
+
+.modal_content {
+  z-index: 999;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 90%;
+  overflow: auto;
+  background: rgb(135, 182, 150);
+  box-sizing: border-box;
+  padding: 24px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.7);
+  border-radius: 4px;
+  width: 30%;
+}
+
+.modal_content > p {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+.close_modal {
+  position: absolute;
+  left: 4px;
+  top: 4px;
+  cursor: pointer;
+  font-size: 15px;
+  opacity: 0.5;
+  background: rgb(94, 89, 89);
+  transition: opacity 0.2s ease;
+}
+
+.close_modal:hover {
+  opacity: 0.9;
 }
