--- a/app/assets/stylesheets/films.scss
+++ b/app/assets/stylesheets/films.scss
@@ -4,19 +4,43 @@
 .heading {
   text-align: center;
 }
-table {
+#table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
 }
-
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 td,
 th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
 }
-
+.cell:hover {
+  cursor: pointer;
+}
+#table_rows:hover {
+  background: rgb(159, 212, 135);
+}
+#back {
+  background-color: #265396;
+  border: none;
+  color: white;
+  margin-top: 20px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+#back:hover {
+  background-color: #0f3877;
+}
 tr:nth-child(even) {
   background-color: #777676;
 }
