--- a/app/assets/stylesheets/films.scss
+++ b/app/assets/stylesheets/films.scss
@@ -14,6 +14,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  h3 {
+    margin-top: 0;
+  }
 }
 td,
 th {
@@ -121,4 +124,30 @@ tr:nth-child(even) {
 
 .close_modal:hover {
   opacity: 0.9;
+}
+
+.tooltip {
+  transition: background-color 0.5s ease;
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+.tooltip:hover {
+  background-color: rgb(236, 236, 236);
+}
+
+.tooltiptext {
+  visibility: hidden;
+  width: 125px;
+  background-color: black;
+  color: rgb(161, 154, 154);
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
