--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -1,5 +1,6 @@
 <div id="banner">
 <h1 class="heading">Star Wars Films</h1>
+<input type="search" placeholder="Search Films..." id="search">
 </div>
     <div class="modal" style="display: none">
       <div class="overlay"></div>
@@ -27,5 +28,3 @@
   </tr>
   <%end%>
 </table>
-
-
