--- a/app/assets/stylesheets/films.scss
+++ b/app/assets/stylesheets/films.scss
@@ -4,6 +4,10 @@
 .heading {
   text-align: center;
 }
+#search {
+  width: 1000px;
+  padding: 15px;
+}
 #table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
