--- a/app/assets/stylesheets/films.scss
+++ b/app/assets/stylesheets/films.scss
@@ -4,10 +4,6 @@
 .heading {
   text-align: center;
 }
-#search {
-  width: 1000px;
-  padding: 15px;
-}
 #table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -32,7 +28,7 @@ th {
   cursor: pointer;
 }
 #table_rows:hover {
-  background: rgb(159, 212, 135);
+  background: rgb(159, 212, 135) !important;
 }
 #back {
   background-color: #265396;
@@ -47,9 +43,6 @@ th {
 }
 #back:hover {
   background-color: #0f3877;
-}
-tr:nth-child(even) {
-  background-color: #777676;
 }
 
 .favourite {
