--- a/app/views/films/index.html.erb
+++ b/app/views/films/index.html.erb
@@ -1,5 +1,5 @@
 <div id="banner">
-<h1 class="heading">Star Wars Films</h1>
+<h1 class="heading">STAR WARS FILMS</h1>
 <input type="search" placeholder="Search Films..." id="search">
 </div>
     <div class="modal" style="display: none">
@@ -11,12 +11,12 @@
       </div>
     </div>
 <table id="table">
-  <thead>
-    <th>Episode No.</th>
-    <th>Film Title</th>
-    <th>Producer</th>
-    <th>Release_Date</th>
-    <th>Preference</th>
+  <thead id="header">
+    <th>EPISODE NO.</th>
+    <th>TITLE</th>
+    <th>PRODUCER</th>
+    <th>RELEASE DATE</th>
+    <th>PREFERENCE</th>
   </thead>
   <tbody id="rows">
   <% @film_info.each do |film| %>
