--- a/app/views/films/show.html.erb
+++ b/app/views/films/show.html.erb
@@ -1,6 +1,6 @@
-<h3><%=@text_obj['title']%></h3>
+<h1 class="heading"><%=@text_obj['title'].upcase%></h1>
 <div id="container">
-  <table>
+  <table id="showtable">
   <%@text_obj.each do |key, v| %>
     <tr>
       <th><%=key%></th>
@@ -59,5 +59,5 @@
     </td>
     </tr>
   </table>
-   <%= link_to "Back", root_path, id: "back" %>
+   <%= link_to "GO BACK", root_path, id: "back" %>
 </div>
